Ejercicio 2 listo para entregar

--- a/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio2/app/src/main/res/values/strings.xml
+++ b/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio2/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Ejercicio2</string>
     <string name="tv_Titulo">Acceso</string>
     <string name="tv_Pistas">Pistas de Pádel</string>
+    <string name="txt_intentos">num Intentos: </string>
+    <string name="txt_intentosCorrectos">num Conexiones: </string>
+    <string name="btn_conectar">Conectar</string>
+
 
 </resources>
