Ejercicio 6 a falta de poder volver a jugar de nuevo

--- a/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio6/app/src/main/res/values/strings.xml
+++ b/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio6/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Ejercicio6</string>
     <string name="tvTitulo">Bienvenido al juego adivina el número secreto</string>
-    <string name="tpNumMax">Escribe el número máximo</string>
-    <string name="tpNumMin">Escribe el número mínimo</string>
-    <string name="tpNumAdv">¿Cual piensas que es el numero para abrir el tesoro?</string>
+    <string name="tpNumMax"></string>
+    <string name="tpNumMin"></string>
+    <string name="tpNumAdv"></string>
     <string name="btnConfirmar">PROBAR SUERTE</string>
+    <string name="tvIntentos">Intentos Disponibles: 10</string>
+    <string name="tvRestantes">Intentos Restantes: </string>
+    <string name="tvPista">Pista:</string>
 </resources>
